import React from 'react';
import felaSnapshotter from '../../../../test-helpers/felaSnapshotter';
import IconBack from '../IconBack';

describe('<IconBack />', () => {
  describe('Errors', () => {
    it('throw an error when the value passed to the "size" prop isn\'t a number', () => {
      expect(() => felaSnapshotter(<IconBack size="2rem" />)).toThrow(
        /^An Icon's "size" prop may only be passed a "number"/
      );
    });
    it('throw an error when the value passed to the "color" prop isn\'t a named color (string)', () => {
      expect(() => felaSnapshotter(<IconBack color="red" />)).toThrow(
        /is not a named-color/
      );
    });
    it('throw an error when the value passed to the "color" prop isn\'t a named color (array of strings)', () => {
      expect(() =>
        felaSnapshotter(<IconBack color={[ 'primary', 'nope', ]} />)
      ).toThrow(/is not a named-color/);
    });
    it('throw an error when the value passed to the "fill" prop isn\'t a named color (string)', () => {
      expect(() => felaSnapshotter(<IconBack fill="red" />)).toThrow(
        /is not a named-color/
      );
    });
    it('throw an error when the value passed to the "fill" prop isn\'t a named color (array of strings)', () => {
      expect(() =>
        felaSnapshotter(<IconBack fill={[ 'primary', 'nope', ]} />)
      ).toThrow(/is not a named-color/);
    });
  });
  describe('DOM element', () => {
    testCase('render correctly when no props are passed', <IconBack />);
    testCase(
      'pass attributes defined in the "attrs" prop to the DOM element',
      <IconBack attrs={{ 'aria-hidden': true, }} />
    );
    testCase(
      'add "id" attribute to DOM element',
      <IconBack id="hasId" />
    );
    testCase(
      'add "onClick" attribute to DOM element',
      <IconBack id={e => console.log('a')} />
    );
  });

  describe('styles', () => {
    testCase("set icon's color",
      <IconBack color={[ 'primary', 'base', ]} />
    );
    testCase("set icon's color responsively",
      <IconBack
        color={[
          { until: 'xl', value: [ 'primary', 'base', ], },
          { from: 'xl', value: [ 'bodyText', 'base', ], },
        ]}
      />
    );
    testCase("set icon's fill",
      <IconBack fill={[ 'primary', 'base', ]} />
    );
    testCase("set icon's fill responsively",
      <IconBack
        fill={[
          { until: 'xl', value: [ 'primary', 'base', ], },
          { from: 'xl', value: [ 'bodyText', 'base', ], },
        ]}
      />
    );
    testCase("set icon's size",
      <IconBack size={6} />
    );
    testCase("set icon's size responsively",
      <IconBack
        size={[ { until: 'xl', value: 6, }, { from: 'xl', value: 7, }, ]}
      />
    );
    testCase('set misc styles on an icon',
      <IconBack miscStyles={{ position: 'relative', }} />
    );
    testCase('responsively set misc styles on an icon',
      <IconBack
        miscStyles={{
          position: [
            { until: 'xl', value: 'relative', },
            { from: 'xl', value: 'static', },
          ],
        }}
      />
    );
  });
});

function testCase(name, Component, { only = false, } = {}) {
  const testFunc = only ? it.only : it;
  testFunc(name, () => {
    const { component, styles, } = felaSnapshotter(Component);
    expect(component).toMatchSnapshot();
    expect(styles).toMatchSnapshot();
  });
}
