// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconBack /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconBack /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconBack /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconBack /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconBack /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconBack /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconBack /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconBack /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconBack /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconBack /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconBack /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconBack /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M84.1 127.7l99.6 99.6-19.8 19.8L44.5 127.7 163.9 8.3l19.8 19.8-99.6 99.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconBack /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
